<resources>
    <string name="app_name">SimformCafeteria</string>
    <string name="hint_mobile_no">Mobile No.</string>
    <string name="hint_eg_7121324754">Eg. 7121324754</string>
    <string name="tv_welcome_to_simform_cafeteria">Welcome To Simform Cafeteria</string>
    <string name="tv_doesn_t_have_any_account">Doesn\'t have any account?</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="tv_hello">Hello,</string>
    <string name="tv_autocomplete_select_your_department">Select Your Department</string>
    <string name="btn_txt_login_in">Login In</string>
    <string name="tv_sign_in">Sign in !</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="tv_or">Or</string>
    <string name="tv_sign_up">Sign Up !</string>
    <string name="tv_type_of_employee">Type Of Employee :</string>
    <string name="radiobtn_trainee">Trainee</string>
    <string name="radiobtn_employee">Employee</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="hint_emp_code">Emp. Code</string>
    <string name="toast_enter_phone">Enter phone Number</string>
    <string name="toast_enter_valid_phone">Enter Valid phone Number</string>
    <string name="morning_tea_coffee">Morning Tea/Coffee</string>
    <string name="morning">Morning</string>
    <string name="tea">Tea</string>
    <string name="coffee">Coffee</string>
    <string name="home">Home</string>
    <string name="available">Available</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_verification">Verification</string>
    <string name="tv_enter_the_verification_code_we_just_sent_you_on_your_mobile_number">Enter the verification Code we just sent you on your Mobile Number</string>
    <string name="btn_verify">Verify</string>
    <string name="toast_enter_mobile_no">Enter Mobile No.</string>
    <string name="toast_enter_valid_mobile_no">Enter Valid Mobile No.</string>
    <string name="phone_verfication_failed">Verfication Failed</string>
    <string name="placeholder_mobile_no">Enter Your Mobile No.</string>
    <string name="placeholder_emp_code">Enter Your Emp. Code</string>
    <string name="placeholder_email_address">Enter Your Email Address</string>
    <string name="placeholder_name">Enter Your Name</string>
    <string name="select_your_department_hint_autocompletetextview">Select your Department</string>
    <string name="firebase_provider_microsoft">microsoft.com</string>
    <string name="toast_wrong_otp">Wrong OTP</string>
    <string name="department_name_mobile">Mobile</string>
    <string name="department_data_not_updated">Data no updated</string>
    <string name="email_empty">Email is Empty</string>
    <string name="mobile_empty">MobileNo is Empty</string>
    <string name="name_empty">Name is Empty</string>
    <string name="employee_code_empty">Please Enter Employee Code</string>
    <string name="enter_department">Please Enter Department</string>
    <string name="user_node">User</string>
    <string name="successfully_registred">You are Successfully Registred</string>
    <string name="registration_failed">Sorry Try Again</string>
    <string name="department_node">Department</string>
    <string name="hint_your_department">Your Department</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="tv_employee_status">Employee Status:</string>
    <string name="btn_logout">Logout</string>
    <string name="review">Review</string>
    <string name="menu">Menu</string>
    <string name="tv_edit_profile">Edit Profile</string>
    <string name="btn_submit">Submit</string>
    <string name="evening">Evening</string>
    <string name="lunch">Lunch</string>
</resources>