<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/profileImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/user_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextNameMaterialLayout"
                style="@style/MyEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/hint_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileImage"
                app:placeholderText="@string/placeholder_name"
                app:startIconDrawable="@drawable/icon_person"
                app:startIconTint="@color/redSimformColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/wellfleet"
                    android:inputType="textPersonName"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextEmailMaterialLayout"
                style="@style/MyEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_email"
                app:layout_constraintEnd_toEndOf="@id/editTextNameMaterialLayout"
                app:layout_constraintStart_toStartOf="@id/editTextNameMaterialLayout"
                app:layout_constraintTop_toBottomOf="@id/editTextNameMaterialLayout"
                app:placeholderText="@string/placeholder_email_address"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/redSimformColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/wellfleet"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextMobileNoMaterialLayout"
                style="@style/MyEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_mobile_no"
                app:layout_constraintEnd_toEndOf="@id/editTextNameMaterialLayout"
                app:layout_constraintStart_toStartOf="@id/editTextNameMaterialLayout"
                app:layout_constraintTop_toBottomOf="@id/editTextEmailMaterialLayout"
                app:placeholderText="@string/placeholder_mobile_no"
                app:startIconDrawable="@drawable/icon_phone"
                app:startIconTint="@color/redSimformColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/wellfleet"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextDepartmentMaterialLayout"
                style="@style/MyEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_your_department"
                app:layout_constraintEnd_toEndOf="@id/editTextNameMaterialLayout"
                app:layout_constraintStart_toStartOf="@id/editTextNameMaterialLayout"
                app:layout_constraintTop_toBottomOf="@id/editTextMobileNoMaterialLayout"
                app:placeholderText="@string/placeholder_mobile_no"
                app:startIconDrawable="@drawable/icon_department"
                app:startIconTint="@color/redSimformColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/wellfleet"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/wellfleet"
                android:text="@string/tv_employee_status"
                android:textAlignment="center"
                android:textColor="@color/redSimformColor"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="@id/editTextNameMaterialLayout"
                app:layout_constraintStart_toStartOf="@id/editTextNameMaterialLayout"
                app:layout_constraintTop_toBottomOf="@id/editTextDepartmentMaterialLayout" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/editTextNameMaterialLayout"
                app:layout_constraintStart_toStartOf="@id/editTextNameMaterialLayout"
                app:layout_constraintTop_toBottomOf="@id/textViewRadioGroup">

                <RadioButton
                    android:id="@+id/radioButtonTrainee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:buttonTint="@color/redSimformColor"
                    android:fontFamily="@font/wellfleet"
                    android:text="@string/radiobtn_trainee"
                    android:textColor="@color/redSimformColor"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButtonEmployee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:buttonTint="@color/redSimformColor"
                    android:fontFamily="@font/wellfleet"
                    android:text="@string/radiobtn_employee"
                    android:textColor="@color/redSimformColor"
                    android:textSize="20sp" />
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEditProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_corner"
                android:drawableStart="@drawable/icon_pencil"
                android:drawablePadding="20dp"
                android:drawableTint="@color/white"
                android:fontFamily="@font/wellfleet"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/btn_edit_profile"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/editTextNameMaterialLayout"
                app:layout_constraintStart_toStartOf="@id/editTextNameMaterialLayout"
                app:layout_constraintTop_toBottomOf="@id/radioGroup" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/button_corner"
                android:drawableStart="@drawable/icon_logout"
                android:drawablePadding="20dp"
                android:fontFamily="@font/wellfleet"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/btn_logout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/editTextNameMaterialLayout"
                app:layout_constraintStart_toStartOf="@id/editTextNameMaterialLayout"
                app:layout_constraintTop_toBottomOf="@id/btnEditProfile" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>